feat(serve): add sampler config
